# InkFox

./: components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json
src/: App.css  App.tsx  Layout.tsx  config-provider.tsx  config.ts  constants.ts  main.tsx  settings-provider.tsx  theme-provider.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: inkfox-logo.icns
src-tauri/src/: chat_stream.rs  lib.rs  main.rs  read_dir_recursive.rs  search_content.rs
src/components/articles/: article-list.tsx  index.module.css  index.tsx  tree-item.tsx  tree-view.tsx  types.ts
src/components/cate-info-panel/: default-content.tsx  empty.tsx  index.module.css  index.tsx
src/components/cates/: index.module.css  index.tsx  types.ts
src/components/editor/: index.module.css  index.tsx  main-editor.tsx  use-ai.ts  use-chat.ts  use-create-editor.ts
src/components/more/: index.module.css  index.tsx
src/components/more-actions/: index.tsx
src/components/nav/: index.module.css  index.tsx
src/components/plate-ui/: ai-leaf.tsx  ai-menu-items.tsx  ai-menu.tsx  ai-toolbar-button.tsx  align-dropdown-menu.tsx  block-context-menu.tsx  code-block-combobox.tsx  code-block-element-static.tsx  code-block-element.tsx  code-leaf.tsx  code-syntax-leaf-static.tsx  code-syntax-leaf.tsx  color-picker.tsx  colors-custom.tsx  column-element.tsx  command.tsx  comment-avatar.tsx  comment-create-form.tsx  comment-item.tsx  comment-leaf.tsx  (+59 more)
src/i18n/: index.ts
src/utils/: debounce.ts  get-nav-path.ts  store-config.ts
(+86 files in other folders)
